--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,39 @@
 name: Build Windows EXE
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.11"
 
     - name: Install dependencies
       run: |
-        pip install pyinstaller playsound pystray pillow wmi pypiwin32 
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+        pip install pystray pillow playsound opencv-python pywin32
 
-    - name: Copy alert.mp3
+    - name: Build EXE with PyInstaller
       run: |
-        echo [ERROR] Please upload your own alert.mp3 >> alert.mp3
+        pyinstaller --noconfirm ^
+          --onefile ^
+          --windowed ^
+          --add-data "alert.mp3;." ^
+          camera_monitor.py
 
-    - name: Build EXE
-      run: |
-        pyinstaller --onefile --noconsole camera_monitor.py
-
-    - name: Upload EXE
-      uses: actions/upload-artifact@v3
+    - name: Upload EXE artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: CameraMonitor
-        path: dist/camera_monitor.exe
+        name: Camera-Monitor-EXE
+        path: dist/*.exe
