--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Build Windows EXE
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -13,7 +11,7 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: "3.11"
@@ -22,18 +20,32 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
-        pip install pystray pillow playsound opencv-python pywin32
+        pip install wmi pywin32
+        pip install pystray pillow playsound opencv-python
 
-    - name: Build EXE with PyInstaller
+    - name: Build with PyInstaller
       run: |
         pyinstaller --noconfirm ^
           --onefile ^
           --windowed ^
           --add-data "alert.mp3;." ^
+          --hidden-import=wmi ^
+          --hidden-import=win32com ^
+          --hidden-import=pythoncom ^
+          --hidden-import=pystray ^
+          --hidden-import=PIL ^
+          --hidden-import=PIL._tkinter_finder ^
+          --hidden-import=playsound ^
+          --hidden-import=cv2 ^
+          --collect-all wmi ^
+          --collect-all pystray ^
+          --collect-all PIL ^
           camera_monitor.py
 
-    - name: Upload EXE artifact
+    - name: Upload EXE
       uses: actions/upload-artifact@v4
       with:
+        name: CameraMonitorEXE
+        path: dist/*.exe      with:
         name: Camera-Monitor-EXE
         path: dist/*.exe
